--- a/voting-client/src/index.html
+++ b/voting-client/src/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
-
-<body>
-  <div id="app"></div>
-</body>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+  </head>
+  <body>
+    <div id="app"></div>
+  </body>
 
 </html>
